syntax = "proto3";

option go_package = "INServer/src/proto/data";

import "data.entity.proto";

message MapData {
    int32 MapID = 1;
    string MapUUID = 2;
    int64 LastTickTime = 3;
    repeated EntityData Entities = 4;
}